criando o crud. Implementando rotas para navegação. Implementando bootstarp modal para esxcluir falta a logica de exclusao, adição e edição.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-news ></app-news>
+<div class="container">
+<section>        
+    <a [routerLink]="['/']"><button class="btn btn-outline-primary mt-5 mb-2 ml-1"><fa-icon [icon]="faEye"></fa-icon></button></a>
+    <button class="btn btn-primary mt-5 mb-2 ml-1">Add</button>
+</section>
+<router-outlet></router-outlet>
+<!-- <app-news></app-news> -->
+
+</div>
