--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,37 +1,49 @@
 <!-- <pre>{{Users | json}}</pre> -->
-<div class="container">
-    <section>
-        <button class="btn btn-primary mt-5 mb-2">Add</button>
-    </section>
-    <section>
-        <div class="card mb-2">
-            <div class="card-body">                
-                <table class="table">
-                    <thead class="thead-dark">
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">name</th>
-                        <th scope="col">username</th>
-                        <th scope="col">email</th>
-                        <th></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let user of Users">
-                        <th scope="row" >{{user.id}}</th>
-                        <td>{{user.name}}</td>
-                        <td>{{user.username}}</td>
-                        <td>{{user.email}}</td>
-                        <td>
-                            <a href="#VerMais"><button class="btn ml-1"><fa-icon [icon]="faEye"></fa-icon></button></a>
-                            <a href="#Editar/{{user.id}}"><button class="btn ml-1"><fa-icon [icon]="faPenSquare"></fa-icon></button></a>
-                            <a href="#Excluir/{{user.id}}"><button class="btn ml-1"><fa-icon [icon]="faTrash"></fa-icon></button></a>
-                        </td>
-                      </tr>                      
-                    </tbody>
-                </table> 
-            </div>
+<section>
+    <div class="card mb-2">
+        <div class="card-body">                
+            <table class="table">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">name</th>
+                    <th scope="col">username</th>
+                    <th scope="col">email</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let user of Users">
+                    <th scope="row" >{{user.id}}</th>
+                    <td>{{user.name}}</td>
+                    <td>{{user.username}}</td>
+                    <td>{{user.email}}</td>
+                    <td>                      
+                      <button class="btn btn-outline-primary  ml-1"><fa-icon [icon]="faPenSquare"></fa-icon></button>
+                      <button class="btn btn-outline-primary  ml-2" (click)="open(content, user.name, user.id)"><fa-icon [icon]="faTrash"></fa-icon></button>
+                    </td>
+                  </tr>                      
+                </tbody>
+            </table> 
         </div>
-    </section>
-</div>
+    </div>
+</section>
+<section>
+  <ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Tem certeza que deseja excluir ?</h4>
+      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <p *ngIf="deletarUser">{{deletarUser}}</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-danger" (click)="deletar(deletarUserId)">Deletar</button>
+    </div>
+  </ng-template>
+</section>
+
+
 
